[gd_scene load_steps=3 format=3 uid="uid://c3jmk4o8vxhgc"]

[ext_resource type="Script" uid="uid://lfx3qpr8o0u7" path="res://scenes/ui/atlas/AtlasTreeUI.gd" id="1_atlas_script"]
[ext_resource type="PackedScene" uid="uid://ho1fwn0ndcau" path="res://scenes/ui/skill_tree/EventSkillTree.tscn" id="2_event_tree"]

[node name="AtlasTreeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_atlas_script")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Breach" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_name = "Breach"
metadata/_tab_index = 0

[node name="BreachTree" parent="TabContainer/Breach" instance=ExtResource("2_event_tree")]
layout_mode = 1

[node name="Ritual" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Ritual"
metadata/_tab_index = 1

[node name="PlaceholderLabel" type="Label" parent="TabContainer/Ritual"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Ritual Mastery

Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pack Hunt" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Pack Hunt"
metadata/_tab_index = 2

[node name="PlaceholderLabel" type="Label" parent="TabContainer/Pack Hunt"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Pack Hunt Mastery

Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boss" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Boss"
metadata/_tab_index = 3

[node name="PlaceholderLabel" type="Label" parent="TabContainer/Boss"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Boss Mastery

Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PointsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PointsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="PointsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Event Atlas"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PointsPanel/VBoxContainer"]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="PointsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Breach Points: 0 available, 0 allocated"
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="PointsPanel/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="PointsPanel/VBoxContainer"]
layout_mode = 2
text = "Reset Skillpoints"

[node name="ResetAllButton" type="Button" parent="PointsPanel/VBoxContainer"]
layout_mode = 2
text = "Reset All"

[node name="HSeparator3" type="HSeparator" parent="PointsPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PointsPanel/VBoxContainer"]
layout_mode = 2
text = "Close Atlas (ESC)"
